[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
volatile = "0.4.6"
bitflags = "1.2.1"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.7.0"
spin = "0.9.8"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }

[profile.release]
debug = true